--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,10 @@
   display: grid;
 }
 
-.container {
-  
-}
 
 .list-container {
   display: inline-grid;
   width: 100%;
-  
   list-style-type: none;
   padding-inline-start: 0%;
 }
@@ -25,22 +21,26 @@ li {
   margin: 5px;
   background-color: lightgrey;
 }
-.form {
-}
-
 
 .add-button {
-  margin: auto;
-  padding: 10px;
+  padding: 5px;
+  margin: 1px;
+  display: inline-block;
   width: 80px;
-  background-color: lightgray;
-  font-size: 18px;
+  border-radius: 1px;
+  font-size: 12px;
+  cursor: pointer;
 }
 
  .delete-button {
    padding: 5px;
+   cursor: pointer;
 } 
 
+.edit-button {
+  padding: 5px;
+  cursor: pointer;
+} 
 .text-input {
   font-size: 20px;
   padding: 10px;
